# miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  interactive_console_output.xml  log.html  output.xml  pyproject.toml  report.html  retro.md  retro2.md  tasks.py
.github/workflows/: CI.yml
Documents/: UserManual.md  schema.sql
data/: database.sqlite  errors.bib  test-database.sqlite  test_build.bib
demo/: demo_add_errors.bib  demo_add_from.bib  demo_build.bib  demobibs.bib
documentation/: DefinitionOfDone.md
src/: AppLibrary.py  app_library.py  build.py  cli_io.py  config.py  constants.py  database_connection.py  gui.py  index.py  index_gui.py  initialize_database.py  mock_io.py  reference.py  ui.py
src/components/: reference_item.py
src/css/: modal.tcss
src/data/: references.bib
src/entities/: reference.py
src/repositories/: reference_repository.py
src/screens/: add_reference.py  confirmation_screen.py  list_keys.py  notify_screen.py  quit_screen.py  show_all.py  style.tcss
src/services/: reference_services.py  refrence_services.py
src/tests/: gui_test.py  reference_repository_test.py  reference_services_test.py  reference_test.py  test_references.bib  testcases.py  tests.robot  ui_test.py
