[tool.poetry]
name = "miniprojekti"
version = "0.0.1"
description = "Ohjelmistotuotannon miniprojekti, lähteet BiBtex muotoon"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
