[tool.poetry]
name = "miniprojekti"
version = "0.0.1"
description = "Ohjelmistotuotannon miniprojekti, lähteet BiBtex muotoon"
authors = ["Eero-Pekka Karppinen", "Jaakko Moilanen", "Mikko Ahro", "Juha Leikas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bibtexparser = "^1.4.1"
invoke = "^2.2.0"
python-dotenv = "^1.0.0"
textualize = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
coverage = "^7.3.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
